--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@auth/core": "0.34.2",
+    "@auth/core": "0.31.0",
     "@convex-dev/auth": "^0.0.90",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.31.2",
@@ -26,6 +27,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^2.1.7",
+    "react-use": "^17.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
