--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-use": "^17.6.0",
+    "react-verification-input": "^4.2.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
