--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@convex-dev/auth": "^0.0.90",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@livekit/components-react": "^2.9.17",
+    "@livekit/components-styles": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -29,6 +31,8 @@
     "convex": "^1.31.2",
     "date-fns": "^4.1.0",
     "jotai": "^2.16.1",
+    "livekit-client": "^2.16.1",
+    "livekit-server-sdk": "^2.15.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
