--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jotai": "^2.16.1",
     "livekit-client": "^2.16.1",
     "livekit-server-sdk": "^2.15.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/lodash": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
