--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@tiptap/extension-placeholder": "^3.15.0",
     "@tiptap/react": "^3.15.0",
     "@tiptap/starter-kit": "^3.15.0",
+    "algoliasearch": "^5.46.2",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "convex": "^1.31.2",
     "date-fns": "^4.1.0",
     "jotai": "^2.16.1",
@@ -41,6 +43,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "react-instantsearch": "^7.22.1",
     "react-resizable-panels": "^2.1.7",
     "react-use": "^17.6.0",
     "react-verification-input": "^4.2.2",
