--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@auth/core": "0.31.0",
+    "@auth/core": "^0.34.2",
     "@convex-dev/auth": "^0.0.90",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
