--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@auth/core": "0.34.2",
+    "@auth/core": "0.37.0",
     "@convex-dev/auth": "^0.0.90",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
@@ -66,7 +66,10 @@
     "typescript": "^5"
   },
   "resolutions": {
-    "@auth/core": "0.34.2"
+    "@auth/core": "0.37.0"
+  },
+  "overrides": {
+    "@auth/core": "0.37.0"
   },
   "ignoreScripts": [
     "sharp",
