--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cmdk": "^1.1.1",
     "convex": "^1.31.2",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.26.2",
     "jotai": "^2.16.1",
     "livekit-client": "^2.16.1",
     "livekit-server-sdk": "^2.15.0",
